<resources>
    <string name="app_name">Libby</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
    <string name="click_to_register">Click to Register</string>
    <string name="loginpassword">loginpassword</string>
    <string name="welcome">welcome</string>
    <string name="view_account">View Account</string>
    <string name="search">Search</string>
    <string name="home_page">Home Page</string>
    <string name="check_in_books">Check in Books</string>
    <string name="check_out_books">Check out Books</string>
    <string name="book_history">Book History</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title</string>
    <string name="author">Author</string>
    <string name="isbn_number">ISBN Number</string>
    <string name="format">Format</string>
    <string name="ebook">Ebook</string>
    <string name="physical">Physical</string>
    <string name="check_out">Check Out</string>
    <string name="enter_author">Enter author</string>
    <string name="enter_isbn_number">Enter ISBN number</string>
    <string name="check_out_books_title">Check Out Books</string>
    <string name="book_history_title">Book History</string>
    <string name="review_book">review book</string>
    <string name="book_recs_title">Book Recommendations</string>
    <string name="favorite_genre">Favorite Genre:</string>
    <string name="preferred_page_length">Preferred Page Length:</string>
    <string name="generate_recommendations">Generate Recommendations</string>
    <string name="recommended_book">Recommended Book:</string>
    <string name="view_recommended_books">View Recommended Books</string>
    <string name="book_recommendations">Book Recommendations</string>
    <string name="select_genre_title">Select Genre</string>
    <string name="page_length_graphic_novel">Graphic Novel: 80 – 100 pages</string>
    <string name="page_length_short_story_collection">Short Stories: 100–300 pages</string>
    <string name="page_length_epic_novel">Epic: 400+ pages</string>
    <string name="page_length_novel">Novel: 200 – 400 pages</string>
    <string name="page_length_novella">Novella: 60 – 150 pages</string>
    <string name="select_page_length_title">Select Book Length</string>
    <string name="genre_historical_fiction">Historical Fiction</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_mystery_thriller">Mystery/Thriller</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_contemporary_fiction">Cont. Fiction</string>
    <string name="generate_recommendation_button">Generate Recommendation</string>
    <string name="Libby">Libby</string>
</resources>