<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/pwhite">

    <TextView
        android:id="@+id/textViewBookRecommendations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_recommendations"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <!-- Genre selection -->
    <TextView
        android:id="@+id/textViewSelectGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_genre_title"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="8dp" />

    <RadioGroup
        android:id="@+id/radioGroupGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioContemporaryFiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/genre_contemporary_fiction"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioRomance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/genre_romance"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioMysteryThriller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/genre_mystery_thriller"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioScienceFiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/genre_science_fiction"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioHistoricalFiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/genre_historical_fiction"
            android:textColor="@android:color/black" />

    </RadioGroup>

    <!-- Page length selection -->
    <TextView
        android:id="@+id/textViewSelectPageLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_page_length_title"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="8dp" />

    <RadioGroup
        android:id="@+id/radioGroupLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioNovella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/page_length_novella"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/page_length_novel"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioEpicNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/page_length_epic_novel"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioShortStoryCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/page_length_short_story_collection"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioGraphicNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/page_length_graphic_novel"
            android:textColor="@android:color/black" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonGenerateRecommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_recommendation_button"
        android:textColor="@color/maroon"
        android:background="@drawable/button_border"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/home_Button_press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page"
        android:textColor="@color/maroon"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
