<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pwhite"
    tools:context=".MainActivity">

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/bottom_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home_page"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="#000000" />

        <!-- Search Button -->
        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Search"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textColor="#000000" />

        <!-- View Account Button -->
        <Button
            android:id="@+id/view_account_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/view_account"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- Logout Button -->
    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Guest"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button to navigate to recommended books page -->
    <Button
        android:id="@+id/rec_books_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Recommended Books"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/maroon"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buttons for Managing Books -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/rec_books_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/check_in_books_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_in_books"
            android:background="@color/maroon"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/check_out_books_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_out_books"
            android:background="@color/maroon"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/book_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_history"
            android:background="@color/maroon"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>